@startuml

title __CONTROLLERS's Class Diagram__\n

  package graphicalUserInterface {
    package graphicalUserInterface.basicWindows {
      package graphicalUserInterface.basicWindows.controllers {
        class BoxSelectorController {
            - cancel : Button
            - confirm : Button
            - comboBox : ComboBox
            + initialize()
        }
      }
    }
  }
  

  package graphicalUserInterface {
    package graphicalUserInterface.basicWindows {
      package graphicalUserInterface.basicWindows.controllers {
        class PasswordController {
            - cancel : Button
            - confirm : Button
            - pass : PasswordField
            + initialize()
        }
      }
    }
  }
  

  package graphicalUserInterface {
    package graphicalUserInterface.basicWindows {
      package graphicalUserInterface.basicWindows.controllers {
        class SearchResultController {
            - list : ListView<String>
            - close : Button
            + initialize()
        }
      }
    }
  }
  

  package graphicalUserInterface {
    package graphicalUserInterface.basicWindows {
      package graphicalUserInterface.basicWindows.controllers {
        class SearchResultDeckController {
            - list : ListView<String>
            - close : Button
            {static} + result : ArrayList
            + initialize()
        }
      }
    }
  }
  

  package graphicalUserInterface {
    package graphicalUserInterface.basicWindows {
      package graphicalUserInterface.basicWindows.controllers {
        class SearchResultSystemController {
            - list : ListView<String>
            - close : Button
            {static} + result : Card
            + initialize()
        }
      }
    }
  }
  

  package graphicalUserInterface {
    package graphicalUserInterface.basicWindows {
      package graphicalUserInterface.basicWindows.controllers {
        class YesNoController {
            - no : Button
            - yes : Button
            - label : Label
            + initialize()
        }
      }
    }
  }
  

  BoxSelectorController -up-|> Initializable
  PasswordController -up-|> Initializable
  SearchResultController -up-|> Initializable
  SearchResultDeckController -up-|> Initializable
  SearchResultSystemController -up-|> Initializable
  YesNoController -up-|> Initializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
